# good-version

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
.github/workflows/: pages.yml  release.yml
docs/: competitor-research.md  development-tasks.md  mvp-requirements.md  prd.md  prototype-structure.md  scope.md  technical-constraints.md  technical-plan.md
docs/adr/: 0001-export-version-archive-from-version-object.md
prototypes/: 01-empty-project-list.html  02-initial-good-version.html  03-rollback-current-in-middle.html  04-view-changes-drawer.html  05-export-current-copy.html  high-fidelity-prototype.html
prototypes/assets/: good-version-prototype.css
scripts/: release.sh
src/: App.test.tsx  App.tsx  formatters.ts  styles.css  types.ts  useFolderDrop.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_service.rs  main.rs  metadata.rs  project_service.rs
src/components/: EmptyStates.tsx  ProjectDetailView.tsx  ProjectFolderDropzone.tsx
tests/e2e/: app.spec.ts  tauri.d.ts
website/: index.html
